# gemma3-g2p

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.dgx-spark  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
gguf-infer/: main.py  pyproject.toml
notebooks/: 2025-12-25.py
ollama-infer/: Modelfile  README.md  config.py  main.py  pyproject.toml
onnx-infer/: README.md  eval.py  export.py  pyproject.toml
plans/: deduplicate-system-prompt.md  dgx-spark-native-venv.md  dgx-spark-training.md  efficient-data-loading.md  train-improvements.md  training-evaluation.md
scripts/: run-dgx-container.sh
src/: data.py  eval.py  export_gguf.py  infer.py  manual_eval.py  prepare_data.py  prepare_dataset.py  train.py
